<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="hello">Choose one of the features below.</string>

    <string name="app_name">Health Care Services</string>
    <string name="description_logo">Health Care Services</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Ambulance and Friends</string>
    <string name="description_feature2">community</string>
    <string name="description_feature3">student</string>
    <string name="description_feature4">immunization</string>
    <string name="description_feature5">Add friend List</string>
    <string name="description_feature6">Registration of new boarn child</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Ambulance</string>
    <string name="title_feature2">community</string>
    <string name="title_feature3">student</string>
    <string name="title_feature4">Immunization</string>
    <string name="title_feature5">add friend List</string>
    <string name="title_feature6">Registration Of New Born Child </string>

    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Click here to send message and get ambulance number</string>
    <string name="feature2_intro">Send sms to community for fund</string>
    <string name="feature3_intro">need student help then click</string>
    <string name="feature4_intro">immunization system---&gt;&gt;select item  </string>
    <string name="feature5_intro">Add friends List</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>

    <string name="about_intro">-----Health Care Emergency Services---- this project provides you health care services and also emergency services. </string>
    <string name="search_intro">Content for the Search page goes here.</string>


</resources>
